--- a/www/sites/djs/template.html
+++ b/www/sites/djs/template.html
@@ -23,12 +23,16 @@
     <style>
         html, body {
             height: 100%;
+            [orient="portrait"]
 
+        }
+        @viewport {
+            orientation: portrait;
         }
     </style>
 </head>
 
-<body style="color: white">
+<body style="color: white; ">
     <div id="header">
         <a href="../artists.html" style="text-decoration: none">
             <div class="header_fixed" style="top: 5px; left: 5px;">
@@ -62,7 +66,7 @@
     </div>
     <div class="col-xs-12 artist_stage" style="position: fixed; top: 240px;">Mainstage: 22:00-23:00!</div>
     
-    <div class="container-fluid" style="margin-top: 285px;">
+    <div class="container-fluid" style="margin-top: 285px; margin-bottom: 10px">
      Alesso ist ein schwedischer DJ, Produzent und Remixer im Bereich House und Progressive.
             Seine erste Produktion veröffentlichte Alesso 2010 mit den Songs Think It's Time, Workaholic,
             Moma und Loose It. Schließlich wurde er von Sebastian Ingrossos Label Refune Records unter Vertrag
