--- a/www/sites/djs/template.html
+++ b/www/sites/djs/template.html
@@ -41,9 +41,11 @@
             </div>
         </a>
     </div>
-    <div id="img" style="top: 50px; position: fixed">
-        <img src="../../img/djs_slider/alesso_slider.jpg" style="height: 150px">
+    <div class="col-xs-12" style="top: 50px; position: fixed; z-index: 2;">
+        <img src="../../img/djs_slider/alesso_slider.jpg" style="height: 150px;">
+
     </div>
+    <div class="col-xs-12" style="height: 150px; background-color: black; position: fixed; top: 50px; z-index: 1;"></div>
     <div class="artist_social col-xs-12" style="position: fixed; top: 195px;">
         <span><a href="http://alessoworld.com/home/"><img src="../../img/social/home.gif" class="artist_soc_btn"
                                                           onmouseover="this.src='../../img/social/home_hover.gif'"
