--- a/www/sites/artists.html
+++ b/www/sites/artists.html
@@ -46,7 +46,7 @@
                 <div class="col-xs-10 artist_container name">Adam Beyer<img src="../img/max/arrow_right.gif" class="arrow_right"/></div>
             </a>
             </div>
-            <div class="row artist_text"><a href="djs/template.html" style="color: #ffffff">
+            <div class="row artist_text"><a href="djs/alesso.html" style="color: #ffffff">
                 <div class="col-xs-2 artist_container"><img src="../img/djs_head/alesso.jpg" class="artist_img"/></div>
                 <div class="col-xs-10 artist_container name">Alesso<img src="../img/max/arrow_right.gif" class="arrow_right"/></div>
             </a>
