--- a/www/sites/djs/3lau.html
+++ b/www/sites/djs/3lau.html
@@ -37,51 +37,63 @@
     <a href="../artists.html" style="text-decoration: none">
         <div class="header_fixed" style="top: 5px; left: 5px;">
             <img src="../../img/max/arrow_left_back.gif" class="header_arrow_back" style="margin: 5px -70px 0 10px; "/>
-            <em class="header_text">Alesso</em>
+            <em class="header_text">3lau</em>
         </div>
     </a>
 </div>
 <div style="top: 50px; position: fixed; z-index: 2;">
-    <img src="../../img/djs_slider/alesso_slider.jpg" style="height: 150px;">
-
+    <img src="../../img/djs_slider/slider_blau__slider.jpg" style="height: 150px;">
 </div>
 <div class="col-xs-12" style="height: 150px; background-color: black; position: fixed; top: 50px; z-index: 1;"></div>
 <div class="artist_social col-xs-12" style="position: fixed; top: 195px;">
-        <span><a href="http://alessoworld.com/home/"><img src="../../img/social/home.gif" class="artist_soc_btn"
+        <span><a href="http://www.3lau.com"><img src="../../img/social/home.gif" class="artist_soc_btn"
                                                           onmouseover="this.src='../../img/social/home_hover.gif'"
                                                           onmouseout="this.src='../../img/social/home.gif'"/></a>
         </span>
 
-        <span><a href="https://www.facebook.com/AlessoOfficial"><img src="../../img/social/facebookW.gif" class="artist_soc_btn"
+        <span><a href="https://www.facebook.com/DJ3LAU"><img src="../../img/social/facebookW.gif" class="artist_soc_btn"
                                                                      onmouseover="this.src='../../img/social/facebook_hover.gif'"
                                                                      onmouseout="this.src='../../img/social/facebookW.gif'"/></a>
         </span>
 
-       <span><a href="https://soundcloud.com/alesso"><img src="../../img/social/soundcloud.gif" class="artist_soc_btn"
+
+       <span><a href="https://soundcloud.com/3lau"><img src="../../img/social/soundcloud.gif" class="artist_soc_btn"
                                                           onmouseover="this.src='../../img/social/soundcloud_hover.gif'"
                                                           onmouseout="this.src='../../img/social/soundcloud.gif'"/></a>
         </span>
-        <span><a href="https://www.youtube.com/user/AlessoOfficial"><img src="../../img/social/youtubeS.gif" class="artist_soc_btn"
+        <span><a href="https://www.youtube.com/user/DJ3LAU"><img src="../../img/social/youtubeS.gif" class="artist_soc_btn"
                                                                          onmouseover="this.src='../../img/social/youtubeS_hover.gif'"
                                                                          onmouseout="this.src='../../img/social/youtubeS.gif'"/></a>
+        </span>
+        <span>
+            <a href="https://twitter.com/3LAU"><img src="../../img/social/twitter.gif" class="artist_soc_btn"
+                                                               onmouseover="this.src='../../img/social/twitter_hover.gif'"
+                                                               onmouseout="this.src='../../img/social/twitter.gif'"/></a>
         </span>
 </div>
 <div class="col-xs-12 artist_stage" style="position: fixed; top: 240px;">Mainstage: 22:00-23:00!</div>
 
 <div class="container-fluid" style="margin-top: 285px; margin-bottom: 10px">
-    Alesso ist ein schwedischer DJ, Produzent und Remixer im Bereich House und Progressive.
-    Seine erste Produktion veröffentlichte Alesso 2010 mit den Songs Think It's Time, Workaholic,
-    Moma und Loose It. Schließlich wurde er von Sebastian Ingrossos Label Refune Records unter Vertrag
-    genommen. Besonders erfolgreich war Nillionaire. Seinen Durchbruch hatte Alesso 2011 mit seinem Remix des Liedes Pressure der pakistanischen Sängerin
-    Nadia Ali. Pressure wurde vielfach von bekannten DJs wie Armin van Buuren, Tiësto, Kaskade, Calvin
-    Harris und der Swedish House Mafia gespielt. Der Remix gewann ebenfalls den International Dance Music
-    Award als Best Progressive Track . 2012 folgte der nächste Hit Calling (Lose My Mind) in Zusammenarbeit mit Sebastian Ingrosso und dem OneRepublic
-    Frontman Ryan Tedder. Daraufhin veröffentlichte Alesso weitere Vocaltracks, wie Years mit Matthew Koma und City of Dreams mit Dirty South.
-    Im Frühjahr 2013 erschien sein Remix des Liedes If I Lose Myself von OneRepublic und er verhalf dem Lied wieder auf hohe Chartplatzierungen.
-    Gemeinsam mit dem britischen Dance-Pop-Duos Hurts und Calvin Harris produzierte er 2013 den Song Under Control. Der
-    Track verschaffte ihm hohe Chart-Platzierungen in sämtlichen europäischen Ländern.
-    Im Herbst 2014 kooperierte er mit der schwedischen Sängerin Tove Lo, woraus der Track Heroes entstand.
-
+    Justin Blau, alias 3LAU ist ein amerikanischer Progressive House und Electro House
+    Produzent. 3lau wurde in New York geboren und wuchs in einer Künstlerfamilie auf.
+    Er entdeckte früh seine Liebe zur Musik und spielt Klavier und Gitarre.
+    Mit Girls Who Save the Worldund All Night Longerntete er erste Erfolge.
+    Außerdem gewann er einen Remix Contest von Tiëstos Work Hard, Play Hard.
+    Seit 2011 veröffentlichte er seine Bootleg-Serie Dance Floor Filth. Top-DJs wie Bob
+    Sinclar, Hardwell und Porter Robinson nahmen einige Stücke in ihr Repertoire auf.
+    Parallel dazu ging er auf 3LAU Your Mind-Tour, gefolgt von der Night-Riot-Tour
+    zusammen mit Carnage.
+    Seit 2013 ist er auch vermehrt auf großen Festivals zu sehen, wie dem Ultra Music
+    Festival oder dem Electric Daisy Carnival.
+    2014 erschien mit Vikingseine Kollaboration mit Botnek auf dem Label Dim Mak. Im
+    Jahr 2014 wurde 3LAU auf Platz 81 in die DJ Mag Top 100 der besten DJs gewählt.
+    3Lau ist nicht nur als DJ aktiv, er unterstützt auch das Projekt Pencils of Promise.
+    Von seinen Tourgeldern und seinen Download-Erlösen wird ein Teil abgezweigt und
+    in Schulgründungen in Guatemala investiert.
+    3LAUs Musik zeichnet sich durch eine ganze Bandbreite an Einflüssen aus und er
+    arbeitet genreübergreifend, unter anderem mit Mashups, House und Dubstep und
+    verwendet oft Gitarren- und Klavierklänge. Bei seinen Liveshows verwendet er
+    Mashups, Electro-House, poppige Gesangsamples sowie Samples aus den 1990ern
 </div>
 
 </body>
