--- a/www/sites/djs/template.html
+++ b/www/sites/djs/template.html
@@ -37,7 +37,7 @@
         <a href="../artists.html" style="text-decoration: none">
             <div class="header_fixed" style="top: 5px; left: 5px;">
                 <img src="../../img/max/arrow_left_back.gif" class="header_arrow_back" style="margin: 5px -70px 0 10px; "/>
-                <em class="header_text">Artists</em>
+                <em class="header_text">Alesso</em>
             </div>
         </a>
     </div>
@@ -69,7 +69,7 @@
     <div class="col-xs-12 artist_stage" style="position: fixed; top: 240px;">Mainstage: 22:00-23:00!</div>
     
     <div class="container-fluid" style="margin-top: 285px; margin-bottom: 10px">
-     Alesso ist ein schwedischer DJ, Produzent und Remixer im Bereich House und Progressive.
+            Alesso ist ein schwedischer DJ, Produzent und Remixer im Bereich House und Progressive.
             Seine erste Produktion veröffentlichte Alesso 2010 mit den Songs Think It's Time, Workaholic,
             Moma und Loose It. Schließlich wurde er von Sebastian Ingrossos Label Refune Records unter Vertrag
             genommen. Besonders erfolgreich war Nillionaire. Seinen Durchbruch hatte Alesso 2011 mit seinem Remix des Liedes Pressure der pakistanischen Sängerin
