--- a/www/sites/djs/audiofreq.html
+++ b/www/sites/djs/audiofreq.html
@@ -37,31 +37,36 @@
     <a href="../artists.html" style="text-decoration: none">
         <div class="header_fixed" style="top: 5px; left: 5px;">
             <img src="../../img/max/arrow_left_back.gif" class="header_arrow_back" style="margin: 5px -70px 0 10px; "/>
-            <em class="header_text">Armin van Buuren</em>
+            <em class="header_text">Audiofreq</em>
         </div>
     </a>
 </div>
 <div style="top: 50px; position: fixed; z-index: 2;">
-    <img src="../../img/djs_slider/armin_slider.jpg" style="height: 150px;">
+    <img src="../../img/djs_slider/slider_audiofreq__slider.jpg" style="height: 150px;">
 </div>
 <div class="col-xs-12" style="height: 150px; background-color: black; position: fixed; top: 50px; z-index: 1;"></div>
 <div class="artist_social col-xs-12" style="position: fixed; top: 195px;">
-        <span><a href="http://www.arminvanbuuren.com"><img src="../../img/social/home.gif" class="artist_soc_btn"
+        <span><a href="www.audio-freq.com"><img src="../../img/social/home.gif" class="artist_soc_btn"
                                                  onmouseover="this.src='../../img/social/home_hover.gif'"
                                                  onmouseout="this.src='../../img/social/home.gif'"/></a>
         </span>
 
-        <span><a href="https://www.facebook.com/arminvanbuuren"><img src="../../img/social/facebookW.gif" class="artist_soc_btn"
+        <span><a href=www.facebook.com/audiofreqdj"><img src="../../img/social/facebookW.gif" class="artist_soc_btn"
                                                              onmouseover="this.src='../../img/social/facebook_hover.gif'"
                                                              onmouseout="this.src='../../img/social/facebookW.gif'"/></a>
         </span>
 
-        <span><a href="https://www.youtube.com/user/arminvanbuuren"><img src="../../img/social/youtubeS.gif" class="artist_soc_btn"
+
+       <span><a href="www.instagram.com/audiofreqdj"><img src="../../img/social/instagram.gif" class="artist_soc_btn"
+                                                        onmouseover="this.src='../../img/social/instagram_hover.gif'"
+                                                        onmouseout="this.src='../../img/social/instagram.gif'"/></a>
+        </span>
+        <span><a href="www.youtube.com/audiofreqdj"><img src="../../img/social/youtubeS.gif" class="artist_soc_btn"
                                                                  onmouseover="this.src='../../img/social/youtubeS_hover.gif'"
                                                                  onmouseout="this.src='../../img/social/youtubeS.gif'"/></a>
         </span>
         <span>
-            <a href="https://twitter.com/arminvanbuuren"><img src="../../img/social/twitter.gif" class="artist_soc_btn"
+            <a href="www.twitter.com/audiofreqDJ"><img src="../../img/social/twitter.gif" class="artist_soc_btn"
                                                     onmouseover="this.src='../../img/social/twitter_hover.gif'"
                                                     onmouseout="this.src='../../img/social/twitter.gif'"/></a>
         </span>
@@ -69,16 +74,14 @@
 <div class="col-xs-12 artist_stage" style="position: fixed; top: 240px;">Mainstage: 22:00-23:00!</div>
 
 <div class="container-fluid" style="margin-top: 285px; margin-bottom: 10px">
-    Armin van Buuren ist ein niederländischer Trance-DJ und -Produzent. Mittlerweile war
-    Armin van Buuren 5 mal auf Platz 1 der DJ Mag Top 100, er ist der erste DJ, der dies
-    geschafft hat. Aktuell belegt der Niederländer Platz 3.
-    2014 wurde er für einen Grammy mit This Is What It Feels Likenominiert. Er ist für
-    seine außergewöhnlichen Shows bekannt, er spielte zum Beispiel mit einem Orchester
-    bei einem offiziellen Auftritt des holländischen Königshauses.
-    Armin van Buuren begeisterte bereits letztes Jahr am Salzburgring und von vielen war
-    zu hören, dass es überhaupt das beste Set am Electric Love 2014 war. Auch er genoss
-    sichtlich seinen Auftritt und meinte danach: „This was one of the best gigs in this
-    summer and I´m not saying this to everybody.“
+    Audiofreq, besser bekannt als Bioweapon oder Sam Gonzalez, ist ein australischer
+    Hardstyle-DJ. Seine Musik wird von den Großen der Hardstyle-Szene supported, wie
+    Headhunterz, Noisecontrollers, The Prophet, D-Block & S-Te-Fan, Ran-D, Technoboy
+    und Kutski.
+    Sam Gonzalez und Corey Soljan waren als Duo bekannt als Bioweapon, jedoch
+    trennten sie sich bei der Produktion ihres ersten Albums, dessen Tracks nun über
+    ihre Social Media Seiten veröffentlicht werden. Während Corey als Code Black
+    performt, produziert und performt Sam weiter als Audiofreq.
 </div>
 
 </body>
