--- a/www/sites/artists.html
+++ b/www/sites/artists.html
@@ -98,12 +98,12 @@
                 <div class="col-xs-10 artist_container name">Carnage<img src="../img/max/arrow_right.gif" class="arrow_right"/></div>
             </a>
             </div>
-            <div class="row artist_text"><a href="djs/cahse_status.html" style="color: #ffffff">
+            <div class="row artist_text"><a href="djs/chase.html" style="color: #ffffff">
                 <div class="col-xs-2 artist_container"><img src="../img/djs_head/chase_and_status.jpg" class="artist_img"/></div>
                 <div class="col-xs-10 artist_container name">Chase & Status<img src="../img/max/arrow_right.gif" class="arrow_right"/></div>
             </a>
             </div>
-            <div class="row artist_text"><a href="djs/code_black.html" style="color: #ffffff">
+            <div class="row artist_text"><a href="djs/code.html" style="color: #ffffff">
                 <div class="col-xs-2 artist_container"><img src="../img/djs_head/code_black.jpg" class="artist_img"/></div>
                 <div class="col-xs-10 artist_container name">Code Black<img src="../img/max/arrow_right.gif" class="arrow_right"/></div>
             </a>
