--- a/www/sites/djs/adam_beyer.html
+++ b/www/sites/djs/adam_beyer.html
@@ -32,12 +32,11 @@
     </style>
 </head>
 
-<body style="color: white; ">
+<body style="color: white;">
 <div id="header">
     <a href="../artists.html" style="text-decoration: none">
         <div class="header_fixed" style="top: 5px; left: 5px;">
             <img src="../../img/max/arrow_left_back.gif" class="header_arrow_back" style="margin: 5px -70px 0 10px; "/>
-            <em class="header_text">Adam Beyer</em>
         </div>
     </a>
 </div>
@@ -60,7 +59,7 @@
 </div>
 <div class="col-xs-12 artist_stage" style="position: fixed; top: 240px;">Mainstage: 22:00-23:00!</div>
 
-<div class="container-fluid" style="margin-top: 285px; margin-bottom: 10px">
+<div class="container" style="margin-top: 285px;">
     Adam Beyer ist ein Techno-DJ und -Produzent aus Schweden.
     1990 kaufte er seinen ersten Plattenspieler und mischte noch mit Schallplatten.
     Seine bevorzugten Stilrichtungen waren Hip-Hop, Acid und Techno.
@@ -72,6 +71,7 @@
     Der erfolgreiche Schwede ist ein renommierter Produzent in der Techno-Szene und
     gründete 3 Plattenlabels – Drumcode, Truesoul und Madeye.
     Beyer verhalf Stockholm zu einer wichtigen Position innerhalb der Techno-Szene.
+
 </div>
 
 </body>
