--- a/www/sites/djs/brennan.html
+++ b/www/sites/djs/brennan.html
@@ -41,26 +41,22 @@
     </a>
 </div>
 <div style="top: 50px; position: fixed; z-index: 2;">
-    <img src="../../img/djs_slider/armin_slider.jpg" style="height: 150px;">
+    <img src="../../img/djs_slider/brennanheart-2__slider.jpg" style="height: 150px;">
 </div>
 <div class="col-xs-12" style="height: 150px; background-color: black; position: fixed; top: 50px; z-index: 1;"></div>
 <div class="artist_social col-xs-12" style="position: fixed; top: 195px;">
-        <span><a href="http://www.arminvanbuuren.com"><img src="../../img/social/home.gif" class="artist_soc_btn"
+        <span><a href="http://www.brennanheart.com"><img src="../../img/social/home.gif" class="artist_soc_btn"
                                                  onmouseover="this.src='../../img/social/home_hover.gif'"
                                                  onmouseout="this.src='../../img/social/home.gif'"/></a>
         </span>
 
-        <span><a href="https://www.facebook.com/arminvanbuuren"><img src="../../img/social/facebookW.gif" class="artist_soc_btn"
-                                                             onmouseover="this.src='../../img/social/facebook_hover.gif'"
-                                                             onmouseout="this.src='../../img/social/facebookW.gif'"/></a>
-        </span>
 
-        <span><a href="https://www.youtube.com/user/arminvanbuuren"><img src="../../img/social/youtubeS.gif" class="artist_soc_btn"
+        <span><a href="http://www.youtube.com/brennanheart"><img src="../../img/social/youtubeS.gif" class="artist_soc_btn"
                                                                  onmouseover="this.src='../../img/social/youtubeS_hover.gif'"
                                                                  onmouseout="this.src='../../img/social/youtubeS.gif'"/></a>
         </span>
         <span>
-            <a href="https://twitter.com/arminvanbuuren"><img src="../../img/social/twitter.gif" class="artist_soc_btn"
+            <a href="http://www.twitter.com/djbrennanheart"><img src="../../img/social/twitter.gif" class="artist_soc_btn"
                                                     onmouseover="this.src='../../img/social/twitter_hover.gif'"
                                                     onmouseout="this.src='../../img/social/twitter.gif'"/></a>
         </span>
@@ -68,16 +64,25 @@
 <div class="col-xs-12 artist_stage" style="position: fixed; top: 240px;">Mainstage: 22:00-23:00!</div>
 
 <div class="container-fluid" style="margin-top: 285px; margin-bottom: 10px">
-    Armin van Buuren ist ein niederländischer Trance-DJ und -Produzent. Mittlerweile war
-    Armin van Buuren 5 mal auf Platz 1 der DJ Mag Top 100, er ist der erste DJ, der dies
-    geschafft hat. Aktuell belegt der Niederländer Platz 3.
-    2014 wurde er für einen Grammy mit This Is What It Feels Likenominiert. Er ist für
-    seine außergewöhnlichen Shows bekannt, er spielte zum Beispiel mit einem Orchester
-    bei einem offiziellen Auftritt des holländischen Königshauses.
-    Armin van Buuren begeisterte bereits letztes Jahr am Salzburgring und von vielen war
-    zu hören, dass es überhaupt das beste Set am Electric Love 2014 war. Auch er genoss
-    sichtlich seinen Auftritt und meinte danach: „This was one of the best gigs in this
-    summer and I´m not saying this to everybody.“
+    Fabian Bohn alias Brennan Heart ist ein 31 jähriger DJ und Produzent aus den
+    Niederlanden. Er ist einer der erfolgreichsten DJ´s der internationalen Hardstyle
+    Szene.
+    Brennan Heart experimentierte mit verschiedenen Musikstilen, wie Techno,
+    Hardtrance, und Techtrance, bevor er sich auf Hardstyle fokussierte und seinen
+    eigenen universalen Sound entwickelte.
+    Tracks wie Imaginaryund Lose My Mindbringen seine Handschrift zum Ausdruck:
+    „Hardstyle machen nicht nur die qualitativen Beats aus, sondern auch die Melodien,
+    die Songs und die Vocals sind wichtige Elemente der Evolution dieses Genres.“
+    Lose My Mind - die erste Veröffentlichung seines eigenen Labels Brennan Heart
+    Music - wurde auf YouTube über 13 Millionen Mal angesehen, was besonders für
+    einen Hardstyle Track herausragend ist.
+    2013 veröffentlichte Brennan Heart seine Dokumentation „Evolution of Style – a
+    journey with Brennan Heart“ – die erste große Dokumentation in diesem Genre.
+    Brennan Heart ist auf den größten Festivals der Welt vertreten, darunter
+    Tomorrowland, Decibel, Hardbass, Reverze, Electric Daisy Carnival sowie
+    Bassleader und Mysteryland.
+    Unter anderem stammen Hymnen für die Qlimax 2010, Defqon.1 und dem Intents
+    Festival von Brennan Heart.
 </div>
 
 </body>
