--- a/www/sites/djs/carnage.html
+++ b/www/sites/djs/carnage.html
@@ -41,43 +41,34 @@
     </a>
 </div>
 <div style="top: 50px; position: fixed; z-index: 2;">
-    <img src="../../img/djs_slider/deorro_main.jpg" style="height: 150px;">
+    <img src="../../img/djs_slider/carnage-2__slider.jpg" style="height: 150px;">
 </div>
 <div class="col-xs-12" style="height: 150px; background-color: black; position: fixed; top: 50px; z-index: 1;"></div>
 <div class="artist_social col-xs-12" style="position: fixed; top: 195px;">
-        <span><a href="http://www.deorro.com"><img src="../../img/social/home.gif" class="artist_soc_btn"
-                                                 onmouseover="this.src='../../img/social/home_hover.gif'"
-                                                 onmouseout="this.src='../../img/social/home.gif'"/></a>
-        </span>
 
-        <span><a href="https://www.facebook.com/Deorro"><img src="../../img/social/facebookW.gif" class="artist_soc_btn"
+        <span><a href="https://www.facebook.com/djcarnageofficial"><img src="../../img/social/facebookW.gif" class="artist_soc_btn"
                                                              onmouseover="this.src='../../img/social/facebook_hover.gif'"
                                                              onmouseout="this.src='../../img/social/facebookW.gif'"/></a>
         </span>
 
 
-       <span><a href="https://soundcloud.com/deorro"><img src="../../img/social/soundcloud.gif" class="artist_soc_btn"
+       <span><a href="https://soundcloud.com/djcarnageofficial"><img src="../../img/social/soundcloud.gif" class="artist_soc_btn"
                                                         onmouseover="this.src='../../img/social/soundcloud_hover.gif'"
                                                         onmouseout="this.src='../../img/social/soundcloud.gif'"/></a>
         </span>
-        <span><a href="http://www.youtube.com/deorrotv"><img src="../../img/social/youtubeS.gif" class="artist_soc_btn"
-                                                                 onmouseover="this.src='../../img/social/youtubeS_hover.gif'"
-                                                                 onmouseout="this.src='../../img/social/youtubeS.gif'"/></a>
-        </span>
+
 
 </div>
 <div class="col-xs-12 artist_stage" style="position: fixed; top: 240px;">Mainstage: 22:00-23:00!</div>
 
 <div class="container-fluid" style="margin-top: 285px; margin-bottom: 10px">
-    Deorro ist ein US-amerikanischer House-DJ aus Los Angeles.
-    Mit 14 Jahren begann er als DJ und einige Jahre später fing er an eigene Tracks zu
-    produzieren. Deorro arbeitete danach mit zahlreichen bekannten Szenegrößen
-    zusammen, wie Steve Aoki, Chuckie, Laidback Luke, Carnage, Diplo, MakJ, Tommie
-    Sunshine, R3hab, & Alvaro.
-    Mit seinem Stück Yeewurde er 2013 auch in Europa bekannt. Zuerst kam er im
-    Herbst in den Niederlanden in die Top 40, dann trat er auch in Deutschland und
-    Österreich in die Charts ein.
-    Derzeit belegt Deorro Platz 19 der DJ Mag Top 100.
+    Carnage hat sich dem Genre EDM und Trap verschrieben.
+    Zuletzt tourte er durch Nord-Amerika und sorgte für ausverkaufte Shows in New
+    York (Terminal 5), Florida (Club Cinema) und LA (Avalon). Bekanntheit erlangte er
+    unter anderem mit Carnage feat. Migos und Bricksund seinem Cover von Big
+    Spender.
+    “The best thing about the whole thing is that I am getting paid to do what I love. All
+    the fans want is the music and that’s what I am going to give them until I die.”
 </div>
 
 </body>
