--- a/www/sites/djs/code.html
+++ b/www/sites/djs/code.html
@@ -41,26 +41,27 @@
     </a>
 </div>
 <div style="top: 50px; position: fixed; z-index: 2;">
-    <img src="../../img/djs_slider/armin_slider.jpg" style="height: 150px;">
+    <img src="../../img/djs_slider/codeblack__slider.jpg" style="height: 150px;">
 </div>
 <div class="col-xs-12" style="height: 150px; background-color: black; position: fixed; top: 50px; z-index: 1;"></div>
 <div class="artist_social col-xs-12" style="position: fixed; top: 195px;">
-        <span><a href="http://www.arminvanbuuren.com"><img src="../../img/social/home.gif" class="artist_soc_btn"
+        <span><a href="http://www.codeblackmedia.nl"><img src="../../img/social/home.gif" class="artist_soc_btn"
                                                  onmouseover="this.src='../../img/social/home_hover.gif'"
                                                  onmouseout="this.src='../../img/social/home.gif'"/></a>
         </span>
 
-        <span><a href="https://www.facebook.com/arminvanbuuren"><img src="../../img/social/facebookW.gif" class="artist_soc_btn"
+        <span><a href="https://www.facebook.com/CodeBlackMedia"><img src="../../img/social/facebookW.gif" class="artist_soc_btn"
                                                              onmouseover="this.src='../../img/social/facebook_hover.gif'"
                                                              onmouseout="this.src='../../img/social/facebookW.gif'"/></a>
         </span>
 
-        <span><a href="https://www.youtube.com/user/arminvanbuuren"><img src="../../img/social/youtubeS.gif" class="artist_soc_btn"
-                                                                 onmouseover="this.src='../../img/social/youtubeS_hover.gif'"
-                                                                 onmouseout="this.src='../../img/social/youtubeS.gif'"/></a>
+
+       <span><a href="https://soundcloud.com/codeblackmedia"><img src="../../img/social/soundcloud.gif" class="artist_soc_btn"
+                                                        onmouseover="this.src='../../img/social/soundcloud_hover.gif'"
+                                                        onmouseout="this.src='../../img/social/soundcloud.gif'"/></a>
         </span>
         <span>
-            <a href="https://twitter.com/arminvanbuuren"><img src="../../img/social/twitter.gif" class="artist_soc_btn"
+            <a href="https://twitter.com/codeblackmedia"><img src="../../img/social/twitter.gif" class="artist_soc_btn"
                                                     onmouseover="this.src='../../img/social/twitter_hover.gif'"
                                                     onmouseout="this.src='../../img/social/twitter.gif'"/></a>
         </span>
@@ -68,16 +69,14 @@
 <div class="col-xs-12 artist_stage" style="position: fixed; top: 240px;">Mainstage: 22:00-23:00!</div>
 
 <div class="container-fluid" style="margin-top: 285px; margin-bottom: 10px">
-    Armin van Buuren ist ein niederländischer Trance-DJ und -Produzent. Mittlerweile war
-    Armin van Buuren 5 mal auf Platz 1 der DJ Mag Top 100, er ist der erste DJ, der dies
-    geschafft hat. Aktuell belegt der Niederländer Platz 3.
-    2014 wurde er für einen Grammy mit This Is What It Feels Likenominiert. Er ist für
-    seine außergewöhnlichen Shows bekannt, er spielte zum Beispiel mit einem Orchester
-    bei einem offiziellen Auftritt des holländischen Königshauses.
-    Armin van Buuren begeisterte bereits letztes Jahr am Salzburgring und von vielen war
-    zu hören, dass es überhaupt das beste Set am Electric Love 2014 war. Auch er genoss
-    sichtlich seinen Auftritt und meinte danach: „This was one of the best gigs in this
-    summer and I´m not saying this to everybody.“
+    Corey Soljan alias Code Black wurde in Sydney, Australien geboren und erkannte
+    früh, dass seine Zukunft als Hardstyle-DJ nicht in seiner Heimatstadt Sydney zu
+    finden ist – er übersiedelte in die Heimat des Hardstyle, in die Niederlande.
+    Die Karriere des Australiers begann 2011 mit dem Hit Red Planet. Er spielt auf den
+    größten Festivals, wie Defqon.1, Qlimax, Mysteryland, Tomorrowland, HardBass
+    und Decibel und komponierte die Defqon.1 Hymne (AUS) Unleash The Beast.
+    Mit Can't Hold Me Back, Brighter Dayund Pandorastellte er sein Können als TopHardstyle-DJ unter Beweis. In Zusammenarbeit mit Atmozfears entstanden Hits wie
+    Starting Overund Accelerate.
 </div>
 
 </body>
