--- a/www/sites/djs/axwell.html
+++ b/www/sites/djs/axwell.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html>
+<head lang="en">
     <meta charset="utf-8">
     <meta name="viewport" id="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=no;" />
+
     <!-- Bootstrap init -->
+
     <script src="../../js/jquery-1.11.2.min.js"></script>
     <script src="../../js/bootstrap.min.js"></script>
     <script src="phonegap.js"></script>
+
     <!-- Styles init -->
     <link rel="stylesheet" href="../../css/bootstrap.min.css" type="text/css"/>
     <link rel="stylesheet" href="../../css/bootstrap-theme.min.css" type="text/css"/>
-    <link rel="stylesheet" href="../../css/bootstrap.css" type="text/css"/>
     <link rel="stylesheet" href="../../css/normalize.css" type="text/css"/>
     <link rel="stylesheet" href="../../css/styles.css" type="text/css"/>
 
@@ -18,41 +20,60 @@
 
     <title>Electric Love Festival</title>
 
+    <style>
+        html, body {
+            height: 100%;
+        [orient="portrait"]
+
+        }
+        @viewport {
+            orientation: portrait;
+        }
+    </style>
 </head>
 
-<body>
-
-<div id="everything" class="content-info">
-
-    <a href="" class="js">
-        <div class="header_div" onclick="history.go(-1);return true;">
-            <img src="../../img/max/arrow_left_back.gif" class="header_arrow_back">
+<body style="color: white; ">
+<div id="header">
+    <a href="../artists.html" style="text-decoration: none">
+        <div class="header_fixed" style="top: 5px; left: 5px;">
+            <img src="../../img/max/arrow_left_back.gif" class="header_arrow_back" style="margin: 5px -70px 0 10px; "/>
         </div>
     </a>
-    <div><img src="../../img/djs_head/axwell_main.jpg" class="img-responsive"></div>
-    <div class="artist_social">
-        <span><a href="http://www.axwellingrosso.tv/"><img src="../../img/social/home.gif" class="artist_soc_btn"
-            onmouseover="this.src='../../img/social/home_hover.gif'"
-            onmouseout="this.src='../../img/social/home.gif'"/></a>
+</div>
+<div style="top: 50px; position: fixed; z-index: 2;">
+    <img src="../../img/djs_slider/axwell_main.jpg" style="height: 150px;">
+
+</div>
+<div class="col-xs-12" style="height: 150px; background-color: black; position: fixed; top: 50px; z-index: 1;"></div>
+<div class="artist_social col-xs-12" style="position: fixed; top: 195px;">
+        <span><a href="http://www.axwellingrosso.tv"><img src="../../img/social/home.gif" class="artist_soc_btn"
+                                                          onmouseover="this.src='../../img/social/home_hover.gif'"
+                                                          onmouseout="this.src='../../img/social/home.gif'"/></a>
         </span>
+
         <span><a href="https://www.facebook.com/axwellingrosso"><img src="../../img/social/facebookW.gif" class="artist_soc_btn"
-            onmouseover="this.src='../../img/social/facebook_hover.gif'"
-            onmouseout="this.src='../../img/social/facebookW.gif'"/></a>
+                                                                     onmouseover="this.src='../../img/social/facebook_hover.gif'"
+                                                                     onmouseout="this.src='../../img/social/facebookW.gif'"/></a>
         </span>
-       <span><a href="https://soundcloud.com/axwellingrossos"><img src="../../img/social/soundcloud.gif" class="artist_soc_btn"
-            onmouseover="this.src='../../img/social/soundcloud_hover.gif'"
-            onmouseout="this.src='../../img/social/soundcloud.gif'"/></a>
+
+       <span><a href="https://soundcloud.com/axwellingrosso"><img src="../../img/social/soundcloud.gif" class="artist_soc_btn"
+                                                          onmouseover="this.src='../../img/social/soundcloud_hover.gif'"
+                                                          onmouseout="this.src='../../img/social/soundcloud.gif'"/></a>
         </span>
-    </div>
-    <div class="artist_home">Axwell und Ingrosso sind ein schwedisches EDM-Duo,
-        welches der Swedish House Mafia entstammt. 2014 gaben Axwell^Ingrosso ihre
-        Debüt-Performance beim Governors Ball Music Festival in New York City.
-        Axwell und Ingrosso löschten ihre persönlichen Facebook Seiten und kreierten
-        eine gemeinsame Seite, um ihre neue Partnerschaft zu unterstreichen. Durch ihre
-        Zusammenarbeit als Axwell^Ingrosso entstanden bereits die Tracks We Come We Rave We
-        Love, On My Way und Can't Hold Us Down, sowie Something New. Bei ihren Produktionen
-        bewahren Axwell^Ingrosso den Geist der Swedish House Mafia. </div>
+</div>
+<div class="col-xs-12 artist_stage" style="position: fixed; top: 240px;">Mainstage: 22:00-23:00!</div>
+
+<div class="container-fluid" style="margin-top: 285px; margin-bottom: 10px">
+    Axwell und Ingrosso sind ein schwedisches EDM-Duo, welches der Swedish House
+    Mafia entstammt. 2014 gaben Axwell^Ingrosso ihre Debüt-Performance beim
+    Governors Ball Music Festival in New York City.
+    Axwell und Ingrosso löschten ihre persönlichen Facebook Seiten und kreierten eine
+    gemeinsame Seite, um ihre neue Partnerschaft zu unterstreichen. Durch ihre
+    Zusammenarbeit als Axwell^Ingrosso entstanden bereits die Tracks We Come We
+    Rave We Love, On My Wayund Can't Hold Us Down, sowie Something New. Bei ihren
+    Produktionen bewahren Axwell^Ingrosso den Geist der Swedish House Mafia.
+
+</div>
 
 </body>
-
 </html>
