--- a/www/sites/djs/blasterjaxx.html
+++ b/www/sites/djs/blasterjaxx.html
@@ -41,26 +41,31 @@
     </a>
 </div>
 <div style="top: 50px; position: fixed; z-index: 2;">
-    <img src="../../img/djs_slider/armin_slider.jpg" style="height: 150px;">
+    <img src="../../img/djs_slider/slider_blasterjaxx__slider.jpg" style="height: 150px;">
 </div>
 <div class="col-xs-12" style="height: 150px; background-color: black; position: fixed; top: 50px; z-index: 1;"></div>
 <div class="artist_social col-xs-12" style="position: fixed; top: 195px;">
-        <span><a href="http://www.arminvanbuuren.com"><img src="../../img/social/home.gif" class="artist_soc_btn"
+        <span><a href="www.blasterjaxx.com"><img src="../../img/social/home.gif" class="artist_soc_btn"
                                                  onmouseover="this.src='../../img/social/home_hover.gif'"
                                                  onmouseout="this.src='../../img/social/home.gif'"/></a>
         </span>
 
-        <span><a href="https://www.facebook.com/arminvanbuuren"><img src="../../img/social/facebookW.gif" class="artist_soc_btn"
+        <span><a href="https://www.facebook.com/BlasterjaxxOfficial"><img src="../../img/social/facebookW.gif" class="artist_soc_btn"
                                                              onmouseover="this.src='../../img/social/facebook_hover.gif'"
                                                              onmouseout="this.src='../../img/social/facebookW.gif'"/></a>
         </span>
 
-        <span><a href="https://www.youtube.com/user/arminvanbuuren"><img src="../../img/social/youtubeS.gif" class="artist_soc_btn"
+
+       <span><a href="www.soundcloud.com/Blasterjaxx"><img src="../../img/social/soundcloud.gif" class="artist_soc_btn"
+                                                        onmouseover="this.src='../../img/social/soundcloud_hover.gif'"
+                                                        onmouseout="this.src='../../img/social/soundcloud.gif'"/></a>
+        </span>
+        <span><a href="www.youtube.com/BlasterjaxxTV"><img src="../../img/social/youtubeS.gif" class="artist_soc_btn"
                                                                  onmouseover="this.src='../../img/social/youtubeS_hover.gif'"
                                                                  onmouseout="this.src='../../img/social/youtubeS.gif'"/></a>
         </span>
         <span>
-            <a href="https://twitter.com/arminvanbuuren"><img src="../../img/social/twitter.gif" class="artist_soc_btn"
+            <a href="www.twitter.com/Blasterjaxx"><img src="../../img/social/twitter.gif" class="artist_soc_btn"
                                                     onmouseover="this.src='../../img/social/twitter_hover.gif'"
                                                     onmouseout="this.src='../../img/social/twitter.gif'"/></a>
         </span>
@@ -68,16 +73,24 @@
 <div class="col-xs-12 artist_stage" style="position: fixed; top: 240px;">Mainstage: 22:00-23:00!</div>
 
 <div class="container-fluid" style="margin-top: 285px; margin-bottom: 10px">
-    Armin van Buuren ist ein niederländischer Trance-DJ und -Produzent. Mittlerweile war
-    Armin van Buuren 5 mal auf Platz 1 der DJ Mag Top 100, er ist der erste DJ, der dies
-    geschafft hat. Aktuell belegt der Niederländer Platz 3.
-    2014 wurde er für einen Grammy mit This Is What It Feels Likenominiert. Er ist für
-    seine außergewöhnlichen Shows bekannt, er spielte zum Beispiel mit einem Orchester
-    bei einem offiziellen Auftritt des holländischen Königshauses.
-    Armin van Buuren begeisterte bereits letztes Jahr am Salzburgring und von vielen war
-    zu hören, dass es überhaupt das beste Set am Electric Love 2014 war. Auch er genoss
-    sichtlich seinen Auftritt und meinte danach: „This was one of the best gigs in this
-    summer and I´m not saying this to everybody.“
+    Blasterjaxx ist ein niederländisches EDM-Duo, bestehend aus den beiden DJs und
+    Produzenten Thom Jongkind und Idir Makhlaf, die ihren Durchbruch 2013 mit ihrer
+    Debüt-Single Faithfeierten. Mit ihrer Musik sind sie hauptsächlich in den Genres Dutch
+    House, Electro House und Big Room vertreten. Nur kurze Zeit später erschien ihre
+    zweite Single Puzzle, die in Zusammenarbeit mit Quinto, entstand. Insbesondere
+    promotet wurde Puzzlevon Hardwell. Bis Ende 2013 folgten weitere Club-Erfolge, wie
+    Snakeoder Loud and Proud, gemeinsam mit Billy the Kit.
+    2014 veröffentlichten sie Mystica. Es folgten sämtliche Auftritte auf Festivals wie beim
+    Ultra Music Festival 2014 in Miami, auf dem sie eine große Anzahl neuer Songs spielten,
+    darunter auch die Tracks Echound Rocket- der in Zusammenarbeit mit W&W entstand.
+    Zudem remixen sie für die Großen der Szene, wie Armin van Buurens Singel Save My
+    Night, Laidback Luke & Dimitri Vegas & Like Mikes Moresowie Tiëstos Adagio For
+    Strings. Weitere Remix-Aufträge erhält das Duo von Musikern wie Afrojack, Hardwell,
+    David Guetta oder Steve Aoki.
+    2014 erschien You Found Me. Es folgte der Track Beautiful World, den sie mit dem
+    niederländischen Hardstyle-Duo D-Block & S-te-Fan produzierten, und der
+    überraschend bigroomlastig wurde.
+    Blasterjaxx belegen derzeit Platz 13 der DJ MAG Top 100.
 </div>
 
 </body>
