--- a/www/sites/djs/coone.html
+++ b/www/sites/djs/coone.html
@@ -41,26 +41,31 @@
     </a>
 </div>
 <div style="top: 50px; position: fixed; z-index: 2;">
-    <img src="../../img/djs_slider/armin_slider.jpg" style="height: 150px;">
+    <img src="../../img/djs_slider/coone__slider.jpg" style="height: 150px;">
 </div>
 <div class="col-xs-12" style="height: 150px; background-color: black; position: fixed; top: 50px; z-index: 1;"></div>
 <div class="artist_social col-xs-12" style="position: fixed; top: 195px;">
-        <span><a href="http://www.arminvanbuuren.com"><img src="../../img/social/home.gif" class="artist_soc_btn"
+        <span><a href="http://www.djcoone.com"><img src="../../img/social/home.gif" class="artist_soc_btn"
                                                  onmouseover="this.src='../../img/social/home_hover.gif'"
                                                  onmouseout="this.src='../../img/social/home.gif'"/></a>
         </span>
 
-        <span><a href="https://www.facebook.com/arminvanbuuren"><img src="../../img/social/facebookW.gif" class="artist_soc_btn"
+        <span><a href="https://www.facebook.com/djcoone"><img src="../../img/social/facebookW.gif" class="artist_soc_btn"
                                                              onmouseover="this.src='../../img/social/facebook_hover.gif'"
                                                              onmouseout="this.src='../../img/social/facebookW.gif'"/></a>
         </span>
 
-        <span><a href="https://www.youtube.com/user/arminvanbuuren"><img src="../../img/social/youtubeS.gif" class="artist_soc_btn"
+
+       <span><a href="https://soundcloud.com/coone"><img src="../../img/social/soundcloud.gif" class="artist_soc_btn"
+                                                        onmouseover="this.src='../../img/social/soundcloud_hover.gif'"
+                                                        onmouseout="this.src='../../img/social/soundcloud.gif'"/></a>
+        </span>
+        <span><a href="https://www.youtube.com/user/CooneDJ"><img src="../../img/social/youtubeS.gif" class="artist_soc_btn"
                                                                  onmouseover="this.src='../../img/social/youtubeS_hover.gif'"
                                                                  onmouseout="this.src='../../img/social/youtubeS.gif'"/></a>
         </span>
         <span>
-            <a href="https://twitter.com/arminvanbuuren"><img src="../../img/social/twitter.gif" class="artist_soc_btn"
+            <a href="https://twitter.com/djcoone"><img src="../../img/social/twitter.gif" class="artist_soc_btn"
                                                     onmouseover="this.src='../../img/social/twitter_hover.gif'"
                                                     onmouseout="this.src='../../img/social/twitter.gif'"/></a>
         </span>
@@ -68,16 +73,17 @@
 <div class="col-xs-12 artist_stage" style="position: fixed; top: 240px;">Mainstage: 22:00-23:00!</div>
 
 <div class="container-fluid" style="margin-top: 285px; margin-bottom: 10px">
-    Armin van Buuren ist ein niederländischer Trance-DJ und -Produzent. Mittlerweile war
-    Armin van Buuren 5 mal auf Platz 1 der DJ Mag Top 100, er ist der erste DJ, der dies
-    geschafft hat. Aktuell belegt der Niederländer Platz 3.
-    2014 wurde er für einen Grammy mit This Is What It Feels Likenominiert. Er ist für
-    seine außergewöhnlichen Shows bekannt, er spielte zum Beispiel mit einem Orchester
-    bei einem offiziellen Auftritt des holländischen Königshauses.
-    Armin van Buuren begeisterte bereits letztes Jahr am Salzburgring und von vielen war
-    zu hören, dass es überhaupt das beste Set am Electric Love 2014 war. Auch er genoss
-    sichtlich seinen Auftritt und meinte danach: „This was one of the best gigs in this
-    summer and I´m not saying this to everybody.“
+    Koen Bauweraerts alias Coone ist ein belgischer DJ und Produzent und lebt in
+    Antwerpen.
+    Er ist bekannt unter den Pseudonymen Mr. Pink, Bounzer oder Justin Tenzz. Seit
+    2010 ist er auch zusammen mit DJ Fenix als Ambassador Inc. bekannt. Coone
+    produziert unter seinem eigenen Label Dirty Workz.
+    Seine Karriere begann 1998 und mittlerweile ist er einer der bekanntesten DJs in der
+    Jumpstyle- und Hardstyle-Szene.
+    2006 bekam seine Karriere einen Aufschwung, mit dem Auftritt auf der Reverze und
+    mit der Produktion der Reverze Hymne Infected(2006) und der Hymne The Chosen
+    One(2007).
+    Weitere bekannte Tracks von Coone sind Jumpstyle Vibesund The Return.
 </div>
 
 </body>
