--- a/www/sites/djs/cyber.html
+++ b/www/sites/djs/cyber.html
@@ -41,26 +41,31 @@
     </a>
 </div>
 <div style="top: 50px; position: fixed; z-index: 2;">
-    <img src="../../img/djs_slider/armin_slider.jpg" style="height: 150px;">
+    <img src="../../img/djs_slider/cyber__slider.jpg" style="height: 150px;">
 </div>
 <div class="col-xs-12" style="height: 150px; background-color: black; position: fixed; top: 50px; z-index: 1;"></div>
 <div class="artist_social col-xs-12" style="position: fixed; top: 195px;">
-        <span><a href="http://www.arminvanbuuren.com"><img src="../../img/social/home.gif" class="artist_soc_btn"
+        <span><a href="http://www.platinum-agency.com/next-in-line/id=2/cyber.html"><img src="../../img/social/home.gif" class="artist_soc_btn"
                                                  onmouseover="this.src='../../img/social/home_hover.gif'"
                                                  onmouseout="this.src='../../img/social/home.gif'"/></a>
         </span>
 
-        <span><a href="https://www.facebook.com/arminvanbuuren"><img src="../../img/social/facebookW.gif" class="artist_soc_btn"
-                                                             onmouseover="this.src='../../img/social/facebook_hover.gif'"
-                                                             onmouseout="this.src='../../img/social/facebookW.gif'"/></a>
+        <span><a href="http://instagram.com/djcybermusic"><img src="../../img/social/instagram.gif" class="artist_soc_btn"
+                                                             onmouseover="this.src='../../img/social/instagram_hover.gif'"
+                                                             onmouseout="this.src='../../img/social/instagram.gif'"/></a>
         </span>
 
-        <span><a href="https://www.youtube.com/user/arminvanbuuren"><img src="../../img/social/youtubeS.gif" class="artist_soc_btn"
+
+       <span><a href="https://soundcloud.com/officialdjcyber"><img src="../../img/social/soundcloud.gif" class="artist_soc_btn"
+                                                        onmouseover="this.src='../../img/social/soundcloud_hover.gif'"
+                                                        onmouseout="this.src='../../img/social/soundcloud.gif'"/></a>
+        </span>
+        <span><a href="https://www.youtube.com/user/MultiSProduction"><img src="../../img/social/youtubeS.gif" class="artist_soc_btn"
                                                                  onmouseover="this.src='../../img/social/youtubeS_hover.gif'"
                                                                  onmouseout="this.src='../../img/social/youtubeS.gif'"/></a>
         </span>
         <span>
-            <a href="https://twitter.com/arminvanbuuren"><img src="../../img/social/twitter.gif" class="artist_soc_btn"
+            <a href="https://twitter.com/OfficialCyberDJ"><img src="../../img/social/twitter.gif" class="artist_soc_btn"
                                                     onmouseover="this.src='../../img/social/twitter_hover.gif'"
                                                     onmouseout="this.src='../../img/social/twitter.gif'"/></a>
         </span>
@@ -68,16 +73,13 @@
 <div class="col-xs-12 artist_stage" style="position: fixed; top: 240px;">Mainstage: 22:00-23:00!</div>
 
 <div class="container-fluid" style="margin-top: 285px; margin-bottom: 10px">
-    Armin van Buuren ist ein niederländischer Trance-DJ und -Produzent. Mittlerweile war
-    Armin van Buuren 5 mal auf Platz 1 der DJ Mag Top 100, er ist der erste DJ, der dies
-    geschafft hat. Aktuell belegt der Niederländer Platz 3.
-    2014 wurde er für einen Grammy mit This Is What It Feels Likenominiert. Er ist für
-    seine außergewöhnlichen Shows bekannt, er spielte zum Beispiel mit einem Orchester
-    bei einem offiziellen Auftritt des holländischen Königshauses.
-    Armin van Buuren begeisterte bereits letztes Jahr am Salzburgring und von vielen war
-    zu hören, dass es überhaupt das beste Set am Electric Love 2014 war. Auch er genoss
-    sichtlich seinen Auftritt und meinte danach: „This was one of the best gigs in this
-    summer and I´m not saying this to everybody.“
+    Seraja Hilbrecht alias Cyber wurde 1995 in Bern in der Schweiz geboren. Der 18-
+    Jährige gilt als aufstrebender Schweizer Hardstyle Produzent.
+    Bereits mit 15 Jahren begann er seine eigenen Musik zu produzieren.
+    Seine Tracks, wie zum Beispiel Unbound, Imagine, Power, Breathlessund Memories,
+    sind eine Mischung aus eingängigen Melodien, energetischen Basslines und
+    euphorischer Stimmung. Sein Stil machte ihn in kurzer Zeit sehr beliebt in der
+    Hardstyle-Szene.
 </div>
 
 </body>
